[package]
name = "arb"
version = "0.5.3"
authors = ["Adrian Kumpf"]
edition = '2021'

[dependencies]
clap = { version = "4.5.23", features = ["derive"], optional = true }
rusb = "0.9.4"
thiserror = "2.0.9"

[features]
build-binary = ["clap"]

[[bin]]
name = "arb"
required-features = ["build-binary"]
