[package]
name = "arb"
version = "0.6.0"
authors = ["Adrian Kumpf"]
edition = '2024'

[dependencies]
clap = { version = "4.5.60", features = ["derive"], optional = true }
rusb = "0.9.4"
thiserror = "2.0.18"

[features]
build-binary = ["clap"]

[[bin]]
name = "arb"
required-features = ["build-binary"]
